# pinmypic

./: .env.example  .gitignore  .replit  CHECKPOINT.md  FACE_RECOGNITION_ARCHITECTURE.md  README.md  build.sh  install-python-deps.sh  package-lock.json  package.json  pyproject.toml  replit.md  start-dev.js  test-firebase.cjs  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AdminPhotoGallery.tsx  AdminRoleManagement.tsx  AdminStatusNotification.tsx  AdminUsersManagement.tsx  AnalyticsReport.tsx  CreateBookingDialog.tsx  CreateEventDialog.tsx  CreatePackageDialog.tsx  EditableEventRow.tsx  ErrorBoundary.tsx  EventDetailsDialog.tsx  EventShareDialog.tsx  EventTypes.tsx  EventsPreview.tsx  FindMyFaceSection.tsx  Footer.tsx  GalleryUploadDialog.tsx  Header.tsx  Hero.tsx  ImageOptimizer.tsx  LazyImage.tsx  LoadingSpinner.tsx  ManageUsersDialog.tsx  OptimizedPhotoGallery.tsx  PaginatedPhotoGallery.tsx  PhotoUploadDialog.tsx  PhotographyShowcase.tsx  ProgressiveImage.tsx  ProtectedRoute.tsx  QRAccess.tsx  QRManagement.tsx  (+3 more)
server/: cache.ts  db.ts  face-processing-queue.ts  face-recognition-service.ts  face-recognition.ts  firebase-admin.ts  index.ts  mongo-db-storage.ts  mongo-storage.ts  mongodb.ts  routes.ts  storage.ts
server/face-recognition/: GPU-SETUP.md  app.py  config.py  download_models.py  face_processor.py  requirements-gpu.txt  requirements.txt  setup-gpu.sh  setup-windows.bat  setup-windows.ps1  start-windows.bat
server/middleware/: auth.ts
server/routes/: qr.ts
shared/: types.ts
(+24 files in other folders)
